Added styled images to cards

--- a/index.html
+++ b/index.html
@@ -17,28 +17,36 @@
 					<section class="rhyme">
 						<div class="frame">
 							<p class="word_behind">Mug</p>
+							<img class="image" src="img/mug_1000.png">
 							<div class="cover">
 								<p class="word_to_rhyme">Bug</p>
+								<img class="image" src="img/bug_1000.png">
 							</div>
 						</div>
 					</section>
 					<section class="answers">
 						<div class="frame">
 							<p class="word_behind">Rat</p>
+							<img class="image" src="img/rat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Bat</p>
+								<img class="image" src="img/bat_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Bug</p>
+							<img class="image" src="img/bug_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Mug</p>
+								<img class="image" src="img/mug_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Boat</p>
+							<img class="image" src="img/boat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Coat</p>
+								<img class="image" src="img/coat_1000.png">
 							</div>
 						</div>
 					</section>
@@ -49,28 +57,36 @@
 					<section class="rhyme">
 						<div class="frame">
 							<p class="word_behind">Sad</p>
+							<img class="image" src="img/sad_1000.png">
 							<div class="cover">
 								<p class="word_to_rhyme">Glad</p>
+								<img class="image" src="img/glad_1000.png">
 							</div>
 						</div>
 					</section>
 					<section class="answers">
 						<div class="frame">
 							<p class="word_behind">Glad</p>
+							<img class="image" src="img/glad_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Sad</p>
+								<img class="image" src="img/sad_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Bat</p>
+							<img class="image" src="img/bat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Rat</p>
+								<img class="image" src="img/rat_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Coat</p>
+							<img class="image" src="img/coat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Boat</p>
+								<img class="image" src="img/boat_1000.png">
 							</div>
 						</div>
 					</section>
@@ -81,28 +97,36 @@
 					<section class="rhyme">
 						<div class="frame">
 							<p class="word_behind">Boat</p>
+							<img class="image" src="img/boat_1000.png">
 							<div class="cover">
 								<p class="word_to_rhyme">Coat</p>
+								<img class="image" src="img/coat_1000.png">
 							</div>
 						</div>
 					</section>
 					<section class="answers">
 						<div class="frame">
 							<p class="word_behind">Mug</p>
+							<img class="image" src="img/mug_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Bug</p>
+								<img class="image" src="img/bug_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Coat</p>
+							<img class="image" src="img/coat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Boat</p>
+								<img class="image" src="img/boat_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Rat</p>
+							<img class="image" src="img/rat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Bat</p>
+								<img class="image" src="img/bat_1000.png">
 							</div>
 						</div>
 					</section>
@@ -113,28 +137,36 @@
 					<section class="rhyme">
 						<div class="frame">
 							<p class="word_behind">Bat</p>
+							<img class="image" src="img/bat_1000.png">
 							<div class="cover">
 								<p class="word_to_rhyme">Rat</p>
+								<img class="image" src="img/rat_1000.png">
 							</div>
 						</div>
 					</section>
 					<section class="answers">
 						<div class="frame">
 							<p class="word_behind">Sad</p>
+							<img class="image" src="img/sad_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Glad</p>
+								<img class="image" src="img/glad_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Boat</p>
+							<img class="image" src="img/boat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Coat</p>
+								<img class="image" src="img/coat_1000.png">
 							</div>
 						</div>
 						<div class="frame">
 							<p class="word_behind">Rat</p>
+							<img class="image" src="img/rat_1000.png">
 							<div class="cover">
 								<p class="word_ahead">Bat</p>
+								<img class="image" src="img/bat_1000.png">
 							</div>
 						</div>
 					</section>
