--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
 			<section class="question">
 				<div class="stuff">
 					<section class="rhyme">
+						<h3>What Rhymes With:</h3>
 						<div class="frame">
 							<p class="word_behind">Mug</p>
 							<img class="image" src="img/mug_1000.png">
@@ -55,6 +56,7 @@
 			<section class="question">
 				<div class="stuff">
 					<section class="rhyme">
+						<h3>What Rhymes With:</h3>
 						<div class="frame">
 							<p class="word_behind">Sad</p>
 							<img class="image" src="img/sad_1000.png">
@@ -95,6 +97,7 @@
 			<section class="question">
 				<div class="stuff">
 					<section class="rhyme">
+						<h3>What Rhymes With:</h3>
 						<div class="frame">
 							<p class="word_behind">Boat</p>
 							<img class="image" src="img/boat_1000.png">
@@ -135,6 +138,7 @@
 			<section class="question">
 				<div class="stuff">
 					<section class="rhyme">
+						<h3>What Rhymes With:</h3>
 						<div class="frame">
 							<p class="word_behind">Bat</p>
 							<img class="image" src="img/bat_1000.png">
